RESOLVED FIXED56772
Dragging text in a WebKit2 window results in a copy instead of a move
https://bugs.webkit.org/show_bug.cgi?id=56772
Summary Dragging text in a WebKit2 window results in a copy instead of a move
Enrica Casucci
Reported 2011-03-21 15:20:31 PDT
Repro steps: 1. Open a WebKit2 window and navigate to http://www.mozilla.org/editor/midasdemo/ 2. Type "hello world". 3. Double click on "world" to select the word and drag it in front of the word "hello". Expected: "world hello" Actual: "worldhello world"
Attachments
Patch (1.64 KB, patch)
2011-04-08 10:34 PDT, Enrica Casucci
darin: review+
Enrica Casucci
Comment 1 2011-04-08 10:29:01 PDT
*** Bug 58145 has been marked as a duplicate of this bug. ***
Enrica Casucci
Comment 2 2011-04-08 10:34:04 PDT
Enrica Casucci
Comment 3 2011-04-08 10:37:26 PDT
Alexey Proskuryakov
Comment 4 2011-04-09 01:05:29 PDT
Note You need to log in before you can comment on or make changes to this bug.