Dragging text in a WebKit2 window results in a copy instead of a move. https://bugs.webkit.org/show_bug.cgi?id=56772 <rdar://problem/9165140>

Reviewed by Darin Adler.

cleanupAfterSystemDrag cannot call dragEnd in WebKit2, since
the call to startDrag is asynchronous.

* page/mac/DragControllerMac.mm:
(WebCore::DragController::cleanupAfterSystemDrag):



Canonical link: https://commits.webkit.org/73085@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83308 268f45cc-cd09-0410-ab3c-d52691b4dbfc